--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "bcryptjs": "^2.4.3",
     "mongodb": "^4.4.1",
     "next": "12.1.2",
-    "next-auth": "^4.3.1",
+    "next-auth": "^3.29.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sweetalert": "^2.1.2",
     "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
