--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.3.1",
     "bcryptjs": "^2.4.3",
     "mongodb": "^4.4.1",
     "next": "12.1.2",
