--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@tailwindcss/line-clamp": "^0.3.1",
     "bcryptjs": "^2.4.3",
-    "mongodb": "^4.4.1",
+    "dns": "file:./src/mock/dns",
     "next": "12.1.2",
     "next-auth": "^3.29.1",
+    "node-fetch": "^3.2.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^8.0.1",
