--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/line-clamp": "^0.3.1",
     "bcryptjs": "^2.4.3",
     "dns": "file:./src/mock/dns",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.2",
     "node-fetch": "^3.2.9",
     "react": "17.0.2",
